Change to simplify the solution

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /.vs/Prismanda/v17/.suo
 /bin/Debug/net8.0-windows10.0.19041.0/win10-x64
 /obj
+/.vs/ProjectEvaluation
+/.vs/ProjectEvaluation/prismanda.metadata.v7.bin
+/.vs/ProjectEvaluation/prismanda.projects.v7.bin
